# libwtf

./: .clang-format  .cursorignore  CMakeLists.txt  README.md  dotnet-tools.json
.github/workflows/: codegen.yml  nupkg.yml
cmake/export/darwin/: exports.txt
cmake/export/linux/: exports.txt
cmake/export/windows/: wtf.def.in  wtf.rc.in
csharp/: MemoryAllocator.cs  Native.cs  NativeTypeNameAttribute.cs  WebTransportFast.csproj  dynamic.rsp  native.rsp
csharp/Dynamic/: Constructors.cs  Delegates.cs  Dynamic.cs
csharp/Native/: Native.cs
experimental/: Experimental.csproj  Program.cs
include/: wtf.h
samples/: CMakeLists.txt  echo_server.c
src/: conn.c  conn.h  context.c  datagram.c  datagram.h  http3.c  http3.h  log.c  log.h  mem.c  qpack.c  qpack.h  server.c  server.h  session.c  session.h  settings.c  settings.h  stream.c  stream.h  types.h  utils.c  utils.h  varint.c  varint.h  wtf.c
tools/: exports.ts
